// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<StoreProvider /> adds task to state on assign 1`] = `
<div>
  <div>
    <p
      class="tasks"
    >
      0%5Bid%5D=assignedTaskID&0%5Bassignee%5D=user%40example.com
    </p>
    <p
      class="events"
    />
    <p
      class="versions"
    >
      assignedTaskID=2
    </p>
    <p
      class="fetching"
    >
      false
    </p>
    <p
      class="ready"
    >
      true
    </p>
    <p
      class="activeTask"
    />
  </div>
</div>
`;

exports[`<StoreProvider /> adds task to state on create 1`] = `
<div>
  <div>
    <p
      class="tasks"
    >
      0%5Bid%5D=unassignedTaskID&0%5Bassignee%5D=
    </p>
    <p
      class="events"
    />
    <p
      class="versions"
    >
      unassignedTaskID=1
    </p>
    <p
      class="fetching"
    >
      false
    </p>
    <p
      class="ready"
    >
      true
    </p>
    <p
      class="activeTask"
    />
  </div>
</div>
`;

exports[`<StoreProvider /> ignores event with outdated version 1`] = `
<div>
  <div>
    <p
      class="tasks"
    />
    <p
      class="events"
    />
    <p
      class="versions"
    >
      longFetchedTask=3
    </p>
    <p
      class="fetching"
    >
      false
    </p>
    <p
      class="ready"
    >
      true
    </p>
    <p
      class="activeTask"
    />
  </div>
</div>
`;

exports[`<StoreProvider /> ignores task assigned to someone else 1`] = `
<div>
  <div>
    <p
      class="tasks"
    />
    <p
      class="events"
    />
    <p
      class="versions"
    >
      assignedTaskID=2
    </p>
    <p
      class="fetching"
    >
      false
    </p>
    <p
      class="ready"
    >
      true
    </p>
    <p
      class="activeTask"
    />
  </div>
</div>
`;

exports[`<StoreProvider /> initializes 1`] = `
<div>
  <div>
    <p
      class="tasks"
    />
    <p
      class="events"
    />
    <p
      class="versions"
    />
    <p
      class="fetching"
    >
      true
    </p>
    <p
      class="ready"
    >
      false
    </p>
    <p
      class="activeTask"
    />
  </div>
</div>
`;

exports[`<StoreProvider /> removes task from state on complete 1`] = `
<div>
  <div>
    <p
      class="tasks"
    />
    <p
      class="events"
    />
    <p
      class="versions"
    >
      assignedTaskID=3
    </p>
    <p
      class="fetching"
    >
      false
    </p>
    <p
      class="ready"
    >
      true
    </p>
    <p
      class="activeTask"
    />
  </div>
</div>
`;

exports[`<StoreProvider /> removes task from state on delete 1`] = `
<div>
  <div>
    <p
      class="tasks"
    />
    <p
      class="events"
    />
    <p
      class="versions"
    >
      assignedTaskID=4
    </p>
    <p
      class="fetching"
    >
      false
    </p>
    <p
      class="ready"
    >
      true
    </p>
    <p
      class="activeTask"
    />
  </div>
</div>
`;
